docs: specify supported aggs in mat aggs docs (#298)
* add aggs

* nit: Moving the location so that people can see the supported
aggregations earlier

* Update materialized_aggregations.mdx

* Update materialized_aggregations.mdx

Co-authored-by: Elliot Marx <elliot@chalk.ai>

* Update materialized_aggregations.mdx

Co-authored-by: Elliot Marx <elliot@chalk.ai>

* fix: Missing line break

---------

Co-authored-by: elvis kahoro <elvis@chalk.ai>
Co-authored-by: Elliot Marx <elliot@chalk.ai>

--- a/materialized_aggregations.mdx
+++ b/materialized_aggregations.mdx
@@ -47,6 +47,27 @@ When serving windowed queries, Chalk uses all buckets containing any overlap wit
 
 ![Materialized Windowed Aggregations](/img/mat_windowed_aggs/mat_window_agg.png)
 
+---
+
+## What types of aggregations does Chalk support?
+
+Chalk supports a number of aggregations out of box. Chalk builtins are very performant as they're optimized and also run natively in C++ and Rust.
+Aggregations automatically skip null or `None` values.
+The following table lists the supported aggregations along with some notes.
+
+| Function | Notes |
+| ---  | --- |
+| `sum` | |
+| `min` | |
+| `max` | |
+| `mean` | Feature type must be `float` or <code>float &#124; None</code>. `None` values are skipped, meaning they are not included in the mean calculation.  |
+|`count` | |
+|`std` | Standard deviation. Requires at least 2 values. |
+|`var` | Variance. Same requirements as `std`. |
+|`approx_count_distinct` | An approximation of the cardinality of non-null data. |
+
+---
+
 ## How do I use materialized aggregations with Chalk?
 
 Users can materialize a feature aggregation in Chalk by supplying the [`materialization`](/api-docs#windowed.materialization)
@@ -120,7 +141,6 @@ In addition to backfilling your aggregation with the recurring batch job, you ca
 windowed aggregation with continuous backfills.
 Continuous backfills can be configured by supplying a [Duration](/api-docs#Duration)] to the `continuous_buffer_duration` e.g. `"36h"`.
 Chalk will compute data within your `continuous_buffer_duration` directly from your online resolvers.
-
 
 <TipInfo>Note: Chalk includes all the data contained in overlapping buckets.
 We suggest shortening the bucket duration, if the time delta between the end of your window interval and the boundary
