--- a/architecture.mdx
+++ b/architecture.mdx
@@ -34,6 +34,8 @@ Most Chalk partners using the Customer Cloud deployment
 choose to have Chalk host the Metadata Plane, but in some
 especially sensitive applications (like FedRamp deployments),
 Chalk partners will also opt to host the Metadata Plane.
+Hosting the metadata plane requires the Enterprise Features
+and Enterprise Support plans.
 
 ### Data Plane
 
