--- a/metrics_parameters.mdx
+++ b/metrics_parameters.mdx
@@ -3,13 +3,13 @@ title: Metrics Parameters
 description: Changing Timescale and Postgres Parameters
 ---
 
-Depending on your deployment, you may need adjust the parameters for the metrics database.
+Depending on your [deployment](/docs/deployment), you may need adjust the parameters for the metrics database.
 You can do this using the [Chalk CLI](/cli) tool. If you do not have the Chalk CLI
 installed, you can install it by following the instructions [here](/cli/install).
 
 ## Change Metrics Parameters
 
-Follow along with the instructions below in your terminal. 
+Follow along with the instructions below in your terminal.
 
 1. Select the correct env:
 `chalk env`
