--- a/changelog.mdx
+++ b/changelog.mdx
@@ -19,7 +19,7 @@ Inspect your log stream the same way you would from the Chalk dashboard but with
 
 `chalk logs [--query="the same string you can put in the web ui"]`
 
-Read more about how to view [logs using the Chalk CLI in our docs.](https://docs.chalk.ai/cli/logs)
+Read more about how to view [logs using the Chalk CLI in our docs.](/cli/logs)
 
 ### Visualize and trace your feature's data lineage with a Graph View
 
