--- a/metrics_parameters.mdx
+++ b/metrics_parameters.mdx
@@ -4,7 +4,7 @@ description: Changing Timescale and Postgres Parameters
 ---
 
 Depending on your [deployment](/docs/deployment), you may need adjust the parameters for the metrics database.
-You can do this using the [Chalk CLI](/cli) tool. If you do not have the Chalk CLI
+You can do this using the [Chalk CLI](/cli/introduction) tool. If you do not have the Chalk CLI
 installed, you can install it by following the instructions [here](/cli/install).
 
 ## Change Metrics Parameters
