--- a/changelog.mdx
+++ b/changelog.mdx
@@ -22,7 +22,7 @@ The feature section of the Chalk dashboard will now show salient metrics for you
 The number of observations, when features were observed, the most observed features, and more.
 Metrics can be sliced and grouped by filters like deployment ID, resolver, and operation type, which helps in debugging (at a glance insight into) deployments.
 
-### Query planner viewer now supports node lookups
+### Query plan viewer now supports node lookups
 
 The Chalk dashboard now also supports query plan node look ups via resolver name, node type, and the input/output features associated with the node.
 This makes it easier to trace the behavior of a resolver in complex query plans.
