--- a/architecture.mdx
+++ b/architecture.mdx
@@ -15,7 +15,7 @@ Chalk offers a hosted model ("Chalk Cloud") and
 a customer-hosted model ("Customer Cloud").
 Most companies choose to run Chalk in their own
 cloud using the Customer Cloud model.
-This page discusses the Customer Cloud deployment of Chalk on AWS and GCP.
+This page discusses the Customer Cloud deployment of Chalk on AWS, GCP, and Azure.
 
 A Chalk deployment consists of a Management Plane and a Data Plane:
 
