--- a/changelog.mdx
+++ b/changelog.mdx
@@ -9,7 +9,7 @@ description: Updates to Chalk!
 
 ### Chalk's C++ SQL driver now supports Spanner DB (GCP)
 
-Chalk’s C++ driver is steadily advancing toward SQLAlchemy parity, with the notable addition of formal Spanner support.
+Chalk’s C++ driver is steadily advancing towards SQLAlchemy parity, with the notable addition of formal Spanner support.
 Spanner queries now run faster, with some query latencies reducing from 24ms to 10ms.
 
 ### Support for composite (primary) keys with Chalk expressions
