--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,7 +7,7 @@ description: Updates to Chalk!
 
 ## January 22, 2025
 
-### Chalk's C++ SQL driver now speeds up parameterized Spanner queries
+### Chalk's C++ SQL Driver for Spanner now supports inputs (parameterized queries)
 
 Chalk’s C++ driver now supports Spanner queries that explicitly accept input parameters.
 These resolvers now run faster, with some query latencies dropping from 24ms to 10ms.
