--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,6 +5,28 @@ metaDescription: Chalk's latest updates.
 description: Updates to Chalk!
 ---
 
+## January 22, 2025
+
+### Chalk's C++ SQL Driver for Spanner now supports inputs (parameterized queries)
+
+Chalk’s C++ driver now supports Spanner queries that explicitly accept input parameters.
+These resolvers now run faster, with some query latencies dropping from 24ms to 10ms.
+
+### Enhanced visibility into your Chalk deployment
+
+The Chalk query plan viewer now highlights nodes for Chalk expressions and SQL resolvers using Chalk's C++ driver in orange.
+Differentiate between various node types at a glance to debug Chalk queries in less time.
+
+The Kubernetes resource page in the Chalk dashboard has been enhanced to include data from the Kubernetes events API, increasing visibility into nodes, pods, and more objects to come.
+Expanding the types of events and their granularity provides better insights into issues and jobs.
+These include node removal, pod scheduling, and deployment failures.
+
+Fixed a bug where breadcrumbs did not correctly hyperlink to a feature's parent in the query plan viewer, enabling quicker traversal through a feature's lineage.
+
+![Colored nodes in Chalk's query plan viewer](/img/changelog-25_01_22-query_plan_viewer.png)
+
+---
+
 ## January 15, 2025
 
 ### Improved the granularity at which Chalk services can be rolled back
