fix: Improving how we talk about the use cases for the kubernetes events API

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -18,8 +18,8 @@ The Chalk query plan viewer now highlights nodes for Chalk expressions and SQL r
 Differentiate between various node types at a glance to debug Chalk queries in less time.
 
 The Kubernetes resource page in the Chalk dashboard has been enhanced to include data from the Kubernetes events API, increasing visibility into nodes, pods, and more objects to come.
-Expanding the types of events and their granularity provides better insights into issues and jobs.
-These include node removal, pod scheduling, and deployment failures.
+Expanding the types of events and their granularity provides better insights into jobs.
+These include events like node removal, pod scheduling, and deployment failures.
 
 Fixed a bug where breadcrumbs did not correctly hyperlink to a feature's parent in the query plan viewer, enabling quicker traversal through a feature's lineage.
 
