docs: add description and sql resolver example

--- a/cpu-profiling-on-prem.mdx
+++ b/cpu-profiling-on-prem.mdx
@@ -1,5 +1,8 @@
 ---
 title: Customer Cloud CPU Profiling
+metaTitle: Customer Cloud CPU Profiling
+description: Profiling the CPU usage of your Chalk deployment in your own cloud environment.
+metaDescription: Profiling the CPU usage of your Chalk deployment in your own cloud environment.
 published: false
 ---
 
