--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -207,7 +207,7 @@ class User:
 [//]: # "#### Limitations"
 [//]: # "At this time, Chalk does not support direct referencing of the grouped windowed feature, as they are intended as an"
 [//]: # "intermediary computation for producing scalar features. As a result, they also cannot be used as input into other"
-[//]: # "resolvers. The grouped windowed feature must be resolved by passing an [underscore expression](/docs/expression) to"
+[//]: # "resolvers. The grouped windowed feature must be resolved by passing an [expression](/docs/expression) to"
 [//]: # "the `expression` parameter."
 
 ---
