--- a/temporal-consistency.mdx
+++ b/temporal-consistency.mdx
@@ -99,7 +99,7 @@ imagine you've observed `Business.sales` and `Business.cogs` many times in the p
 you track, these values have changed over time.
 
 Now, you want to compute a new feature, `Business.gross_profit`, which is the difference between `Business.sales` and
-`Business.cogs`. We can add an [underscore expression](/docs/expression) to compute this new feature:
+`Business.cogs`. We can add an [expression](/docs/expression) to compute this new feature:
 
 ```diff-py
 - from chalk.features import features, FeatureTime
