--- a/changelog.mdx
+++ b/changelog.mdx
@@ -111,7 +111,7 @@ the [fuzzywuzzy](https://pypi.org/project/fuzzywuzzy/) partial ratio between two
 [`length`](/api-docs#length) to compute the length of a string. We've also added
 [`struct_pack`](/api-docs#struct_pack) to construct a struct from a mapping, [`year`](/api-docs#year) to extract
 the year from a date, and [`last_day_of_month`](/api-docs#last_day_of_month) to return the last date in the month
-given a date. To read more about all of the `chalk.functions` available for writing underscore expressions, check
+given a date. To read more about all of the `chalk.functions` available for writing expressions, check
 out our [`API docs`](/api-docs#coalesce).
 
 ---
@@ -132,25 +132,25 @@ set metadata as a dictionary. This can be useful for storing information such as
 to the online or offline store, or for tagging and labeling datasets. Read more about all of the `DatasetRevision`
 methods in our [API documentation](/api-docs#DatasetRevision).
 
-### Underscore expressions support more array functions
+### Expressions support more array functions
 
-The `chalk.functions` library now supports more array functions that can be used in [underscore expressions](/docs/expression).
+The `chalk.functions` library now supports more array functions that can be used in [expressions](/docs/expression).
 `array_max` and `array_min` return the maximum and minimum values in an array, respectively. `array_distinct` returns
 a list of the distinct elements in an array, and `array_sort` sorts the elements of an array by ascending or descending
-order. Read more about all of the `chalk.functions` available for writing underscore expressions in our [`API docs`](/api-docs#section-Functions).
+order. Read more about all of the `chalk.functions` available for writing expressions in our [`API docs`](/api-docs#section-Functions).
 
 ---
 
 ## December 9, 2024
 
-### Underscore expressions support struct field access and more functions
+### Expressions support struct field access and more functions
 
-You can now reference dataclass struct fields with [underscore expressions](/docs/expression).
-We've also added more functions to `chalk.functions` that can be used in underscore expressions,
+You can now reference dataclass struct fields with [expressions](/docs/expression).
+We've also added more functions to `chalk.functions` that can be used in expressions,
 including `is_us_federal_holiday` for determining if a date is a federal holiday in the United States,
 `array_sort` for sorting the elements of an array by ascending or descending order, and `element_at` for
 retrieving the element at a specified index in an array. To read more about all of the `chalk.functions`
-in your toolbox for writing underscore expressions, check out our [`API docs`](/api-docs#section-Functions).
+in your toolbox for writing expressions, check out our [`API docs`](/api-docs#section-Functions).
 
 ### New overview page and dashboard updates for viewing stack traces and recent feature values
 
@@ -199,16 +199,16 @@ environments:
         requirements: pyproject.toml
 ```
 
-### Underscore expressions now support more datetime, JSON, string, and math functions
+### Expressions now support more datetime, JSON, string, and math functions
 
-We've added more functions to `chalk.functions` that can be used in [underscore expressions](/docs/expression).
+We've added more functions to `chalk.functions` that can be used in [expressions](/docs/expression).
 You can now use [json_extract_array](/api-docs#json_extract_array) to extract arrays of strings, bools, numbers, or
 nulls from a JSON feature, [safe_divide](/api-docs#safe_divide) to divide two numbers safely, returning `None` if the
 denominator is zero, [to_iso8601](/api-docs#to_iso8601) to convert a datetime feature to an ISO 8601 string,
 [from_unix_seconds](/api-docs#from_unix_seconds) and [from_unix_milliseconds](/api-docs#from_unix_milliseconds) to
 convert a Unix timestamp in seconds or milliseconds to a datetime feature, and finally
 [regexp_replace](/api-docs#regexp_replace) to replace substrings in a string using a regular expression. To read more
-about all of the `chalk.functions` in your toolbox for writing underscore expressions, check out our
+about all of the `chalk.functions` in your toolbox for writing expressions, check out our
 [`API docs`](/api-docs#section-Functions).
 
 ### Warning banners in dashboard for deployments
@@ -237,9 +237,9 @@ You can now define a materialized aggregate backfill over features that are retu
 rather than just one resolver. Read more about the `chalk aggregate backfill` command in our
 [CLI docs](https://docs.chalk.ai/cli/aggregate_backfill).
 
-### Underscore expressions now support more array and encoding functions
+### Expressions now support more array and encoding functions
 
-We've added more functions to `chalk.functions` that can be used in [underscore expressions](/docs/expression).
+We've added more functions to `chalk.functions` that can be used in [expressions](/docs/expression).
 You can now use [`array_join`](/api-docs#array_join) to concatenate array elements into a string,
 [`cardinality`](/api-docs#cardinality) to count the number of elements in an array, as well as
 [`max`](/api-docs#max) and [`min`](/api-docs#min) to find the maximum and minimum values, respectively, in an array.
@@ -249,7 +249,7 @@ numbers and use [`from_base`](/api-docs#from_base) for base conversion. For enco
 the [`sha1`](/api-docs#sha1), [`sha256`](/api-docs#sha256), and [`sha512`](/api-docs#sha512) hashes of strings.
 Finally, you can use [`format_datetime`](/api-docs#format_datetime) to format datetime features using a format string
 and [`strpos`](/api-docs#strpos) to find the first position of a substring in a string. To read more about all of the
-`chalk.functions` in your toolbox for writing underscore expressions, check out our
+`chalk.functions` in your toolbox for writing expressions, check out our
 [`API docs`](/api-docs#section-Functions).
 
 ### Optionally cache nulls or default feature values in the online store
@@ -263,7 +263,7 @@ store if it exists. Read more about how to use `cache_defaults` and `cache_nulls
 
 ### Define features as map types
 
-You can now define features as map types and reference these map features in underscore expressions.
+You can now define features as map types and reference these map features in expressions.
 
 ```python
 from chalk.features import features
@@ -305,7 +305,7 @@ details like the pod states and the resources requested by each pod.
 
 ![Pod Resources in Deployment Page](/img/deployment_pods_nov_2024.png)
 
-### Resolve list features with underscore expressions
+### Resolve list features with expressions
 
 We've added the `array_agg` function to `chalk.functions` to help you resolve list features with [underscore
 expressions](/docs/expression). For example, you can now express the following features to aggregate
@@ -330,7 +330,7 @@ class User:
     all_watched_video_categories: list[str] = F.array_agg(_.videos[_.category])
 ```
 
-To see all of the `chalk.functions` that you can use in underscore expressions, see
+To see all of the `chalk.functions` that you can use in expressions, see
 our [API documentation](/api-docs#functions).
 
 ### View usage information through the Chalk CLI
@@ -354,12 +354,12 @@ check whether the query outputs match your expected outputs. This function shoul
 [pytest](https://docs.pytest.org/en/stable/) for integration testing. To read more about different
 methods and best practices for integration testing, see our [integration test docs](/docs/integration-tests).
 
-### Underscore expressions support more mathematical and logical functions
+### Expressions support more mathematical and logical functions
 
 This week, we've added mathematical functions `floor`, `ceil`, and `abs` to `chalk.functions`, along with
 the logical functions `when`, `then`, `otherwise`, and `is_null`. We've also added the `haversine` function
 for computing the Haversine distance between two points on Earth given their latitude and longitude. These
-points can be used in [underscore expressions](/docs/expression) to define features with code that can be
+points can be used in [expressions](/docs/expression) to define features with code that can be
 statically compiled in C++ for faster execution. See the full list of functions you can use in underscore
 expressions in our [API docs](/api-docs#functions).
 
@@ -399,13 +399,13 @@ For example, if you have checked out a branch named `my-very-own-branch` you can
 and all of your client calls will be directed at `my-very-own-branch`. To read more about how to use ChalkClient, see
 our [API documentation](/api-docs#ChalkClient).
 
-### Underscore expressions support functions for URL parsing, regular expressions, and more
+### Expressions support functions for URL parsing, regular expressions, and more
 
-We've added more functions to `chalk.functions` that can be used in [underscore expressions](/docs/expression).
+We've added more functions to `chalk.functions` that can be used in [expressions](/docs/expression).
 You can now use `regexp_like`, `regexp_extract`, `split_part`, and `regexp_extract_all` to do regular expression matching and
 use `url_extract_host`, `url_extract_path`, and `url_extract_prtocol` to parse URL's. In addition, we've added
 helpful logical functions like `if_then_else`, `map_dict`, and `cast` to broaden the span of features that you can
-define using underscore expressions. To read more about all of our functions, check out our
+define using expressions. To read more about all of our functions, check out our
 [API documentation](/api-docs#functions).
 
 ### Deployment build logs for AWS environments
@@ -416,18 +416,18 @@ We now provide more detailed build logs for deployments in AWS environments in t
 
 ## October 28, 2024
 
-### Run predictions against SageMaker from Chalk, and do so much more in underscore expressions
+### Run predictions against SageMaker from Chalk, and do so much more in expressions
 
 We've added a new function [`chalk.functions.sagemaker_predict`](/api-docs#sagemaker_predict) that allows
 you to run predictions against a SageMaker endpoint to resolve features. Read more about how to define
 a SageMaker endpoint, encode your input data, and run predictions in our [SageMaker tutorial](/docs/sagemaker-tutorial).
 
-In addition to being able to make SageMaker calls, [underscore expressions](/docs/expression) now support a
+In addition to being able to make SageMaker calls, [expressions](/docs/expression) now support a
 variety of new functions. With these functions imported from `chalk.functions`, you can perform encoding,
 decoding, math, datetime manipulation, string manipulation, and more! For example, say you have a Transaction
 feature, where you make a SageMaker call to enrich the transaction data and provide a label for the transaction,
 and you parse this label for other features. You can now define all of these features related to transaction
-enrichment using underscore expressions and Chalk functions in the feature definition:
+enrichment using expressions and Chalk functions in the feature definition:
 
 ```python
 from datetime import date
@@ -546,9 +546,9 @@ please reach out to the team.
 
 ## October 7, 2024
 
-### Underscore expressions support datetime subtraction and total_seconds
+### Expressions support datetime subtraction and total_seconds
 
-[Underscore expressions](/docs/expression) now support datetime subtraction and the use of a new
+[Expressions](/docs/expression) now support datetime subtraction and the use of a new
 library function `chalk.functions.total_seconds`. This allows you to compute the number of seconds
 in a time duration and define more complex time interval calculations using performant underscore
 expressions.
@@ -770,7 +770,7 @@ in your table as a CSV for further analysis.
 The new `chalk.functions` module contains several helper functions for feature computation. For example, if you have a
 feature representing a raw value in GZIP-compressed value, you can use [`gunzip`](/api-docs#gunzip) with an underscore
 reference to create an unzipped feature. The full list of available functions can be found at the bottom of our
-[underscore expression documentation](/docs/expression#additional-functions).
+[expression documentation](/docs/expression#additional-functions).
 
 ### JSON feature type
 
@@ -906,9 +906,9 @@ for finding the most recent observation for a requested timestamp is now more ef
 We now support [DynamoDB](/docs/dynamodb) as a native accelerated data source! After connecting your AWS credentials,
 Chalk automatically has access to your DynamoDB instance, which you can query with [PartiQL](https://partiql.org/).
 
-### Underscore expressions support references to the target window duration
+### Expressions support references to the target window duration
 
-[Underscore expressions](/docs/expression) on [windowed](/docs/aggregations) features can now include the special
+[Expressions](/docs/expression) on [windowed](/docs/aggregations) features can now include the special
   expression `_.chalk_window` to reference the target window duration. Use `_.chalk_window` in [windowed aggregation
   expressions](/docs/aggregations#querying-by-windowed-time-range) to define aggregations across multiple window sizes
   at once:
@@ -986,7 +986,7 @@ GKE.
 
 * We've significantly improved SQL runtime in our query planner by executing eligible queries in C++ instead of
   SQLAlchemy. Chat with our support team if you'd like to update your query planner options.
-* We improved the performance of some underscore expressions by executing `count()` operations as native dataframe
+* We improved the performance of some expressions by executing `count()` operations as native dataframe
   operations.
 
 ### Miscellaneous improvements
@@ -1019,14 +1019,14 @@ an efficient query plan to retrieve your SQL data without requiring you to load 
 before sending it back to Chalk. For more details, check out [our
 documentation](/docs/query-offline#sql-queries-as-input).
 
-### Static planning of underscore expressions
+### Static planning of expressions
 
-We shipped static planning of [underscore expressions](/docs/expression). Underscore expressions
-enable you to define and resolve features from operations on other features. When you use underscore expressions, we
+We shipped static planning of [expressions](/docs/expression). expressions
+enable you to define and resolve features from operations on other features. When you use expressions, we
 now do static analysis of your feature definition to transform it into performant C++ code.
 
-Underscore expressions currently support basic arithmetic and logical operations, and we continue to build out more
-functionality! See the code snippet below for some examples of how to use underscore expressions:
+Expressions currently support basic arithmetic and logical operations, and we continue to build out more
+functionality! See the code snippet below for some examples of how to use expressions:
 
 ```python
 @features
