--- a/underscore.mdx
+++ b/underscore.mdx
@@ -61,7 +61,7 @@ class StructAttributeAccess:
 
 In this example, we have a Transaction feature class with `total` and `sales_tax` features and we want to define
 `subtotal` as `total` minus `sales_tax`. Instead of writing a Python resolver, we can resolve `subtotal` with an
-underscore expression:
+expression:
 
 ```diff-py
 - from chalk import online
