--- a/choosing-online-offline-stores.mdx
+++ b/choosing-online-offline-stores.mdx
@@ -15,71 +15,56 @@ caching computed values in the online store can further improve performance.
 
 ### GCP Online Store Options
 
-| Store       | Description                              | Performance | Scalability | Cost |
-|-------------|------------------------------------------|-------------|-------------|------|
-| Cloud SQL   | Postgres (relational database)           | milliseconds, disk IO bottlenecks possible
-| Memorystore | Redis (in-memory key-value NoSQL store)  | microseconds, in-memory
-| Big Table   | Distributed wide-column NoSQL database   |
+There are three options for online stores for customers on GCP (Google Cloud Platform):
 
+| Store       | Description                              | Performance  | Scaling    |
+|-------------|------------------------------------------|--------------|------------|
+| Cloud SQL   | Postgres (relational database)           | milliseconds | vertical   |
+| Memorystore | Redis (in-memory key-value NoSQL store)  | microseconds | vertical   |
+| Big Table   | Distributed wide-column NoSQL database   | milliseconds | horizontal |
+
+Generally, customers will choose the data store that they already use within their data platform. However,
+we would generally recommend Memorystore for low-latency queries, Cloud SQL for general query caching and
+costs, and Big Table for huge storage needs.
 
 ### AWS
 
-Postgres (Amazon RDS)
-Redis (Amazon Elasticache)
-DynamoDB
+There are three options for customers on AWS (Amazon Web Services):
+
+| Store       | Description                    | Performance  | Scaling     |
+|-------------|--------------------------------|--------------|-------------|
+| RDS         | Postgres (relational database) | milliseconds | vertical    |
+| Elasticache | Redis (in-memory store)        | microseconds | vertical    |
+| DynamoDB    | Key-Value NoSQL database       | milliseconds | auto-scales |
+
+We generally recommend DynamoDB for high performance and Elasticache for low-latency and greater storage capacity
+for large rows. However, some customers may choose to use RDS depending on their existing data platform.
 
 ### Azure
 
-Postgres (Azure Database for PostgreSQL)
-Redis (Azure Cache for Redis)
+There are two options for customers on Azure:
 
+| Store                          | Description                       | Performance  | Scaling     |
+|--------------------------------|-----------------------------------|--------------|-------------|
+| Azure Database for PostgreSQL  | Postgres (relational database)    | milliseconds | vertical    |
+| Azure Cache for Redis          | Redis (key-value in-memory store) | microseconds | horizontal  |
+
+We generally recommend the Azure Cache for Redis for a low-latency and scalable database with storage based
+pricing, but some customers may choose to use Azure Database for PostgreSQL depending on their existing data platform.
 
 ## Offline Store Options
 
-### GCP
+The Chalk offline store is used for storing historical feature values. The offline store also serves
+data for offline queries, which can be used for analytics, batch processing, and other use cases.
+We offer four options for offline stores:
 
-Big Query
+| Store                 | Storage                     |
+|-----------------------|-----------------------------|
+| Google Big Query      | Columnar (BigTable-based)   |
+| Amazon Redshift       | Columnar (Parquet)          |
+| Snowflake             | Columnar (Micro-partitions) |
+| Databricks Delta Lake | Columnar (Parquet)          |
 
-### AWS
-
-Amazon Redshift
-
-### Azure
-
-
-Chalk uses several storage technologies
-
-we offer four types of online stores:
-postgres ( amazon rds, google cloudsql)
-redis (elasticache, google memorystore, amazon elasticache)
-dynamodb
-big table
-we offer four types of offline stores?
-Google Big Query
-Amazon Redshift
-Snowflake
-Dbricks Delta Lake
-
-Online Store Options
-1. Redis or DynamoDB
-- Tradeoffs:
-- Performance: High throughput and low latency are achieved with Redis, making it suitable for key-value access patterns.
-- Scalability: DynamoDB is highly scalable but may introduce some latency due to its distributed nature.
-- Cost: Redis can be more cost-effective for smaller datasets, while DynamoDB’s pricing can grow with large-scale data usage.
-2. BigTable (if considering horizontal scalability)
-- Tradeoffs:
-- Scalability: Excellent for massive datasets and high-throughput applications.
-- Cost: May be more expensive than traditional key-value stores depending on the usage pattern and data size.
-Offline Store Options
-1. Snowflake, BigQuery, or Delta Lake
-- Tradeoffs:
-- Storage & Computation: Optimized for storing historical feature values and performing batch queries. They are excellent for analytics and larger datasets.
-- Cost & Complexity: Snowflake and BigQuery can incur costs based on usage, and managing large datasets may require more complex query optimizations compared to simpler storage solutions.
-2. TimescaleDB (if considering time-series data)
-- Tradeoffs:
-- Time-Series Capabilities: Great for time-series data with robust querying capabilities.
-- Cost: Can offer savings for specific data access patterns compared to more general-purpose data warehouses.
-General Considerations
-- Feature Caching: Using an online store allows for the usage of max_staleness, enabling faster response times and cache hits.
-- Data Latency & Freshness: The choice of the online store impacts how fresh data is served. For real-time applications, using a fast online store with caching features is vital.
-- Integration Complexity: Some options may require additional setup or configuration, depending on the selected technology stack and your environment's architecture.
+For customers with GCP cloud deployments, we generally recommend Google Big Query for its performance in
+analytical queries. However, generally, customers will choose the data store that they already use within
+their data platform.
