--- a/choosing-online-offline-stores.mdx
+++ b/choosing-online-offline-stores.mdx
@@ -37,8 +37,9 @@ There are three options for customers on AWS (Amazon Web Services):
 | ElastiCache | Redis (in-memory store)        | microseconds | vertical    |
 | DynamoDB    | Key-Value NoSQL database       | milliseconds | auto-scales |
 
-We generally recommend DynamoDB for high performance and ElastiCache for its low-latency and greater storage capacity
-for large rows. However, some customers may choose to use RDS depending on their existing data platform.
+We generally recommend DynamoDB for its performance optimizations and ElastiCache for its low-latency and greater
+storage capacity for large rows. However, some customers may choose to use RDS depending on their existing
+data platform.
 
 ### Azure
 
