--- a/sql.mdx
+++ b/sql.mdx
@@ -22,7 +22,7 @@ Chalk supports running SQL from files or from strings. When you run queries that
 automatically pushes your input parameters into the `WHERE` clause of your query. For more details, see our section on
 [push-down filters](/docs/sql#push-down-filtering).
 
-The examples on this page use our [PostgresQL data source](/docs/postgresql), but can be generalized to any of our other
+The examples on this page use our [PostgreSQL data source](/docs/postgresql), but can be generalized to any of our other
 SQL data sources.
 
 ### SQL file resolvers
