link to sql docs

--- a/sql-resolvers.mdx
+++ b/sql-resolvers.mdx
@@ -78,3 +78,5 @@ function. For SQL file resolvers, these parameters are specified in the comments
 
 select id, name, age, hobbies, updated_at from users;
 ```
+
+For the full list of configurations, see [here](/docs/sql#configuration).
