--- a/vector-search.mdx
+++ b/vector-search.mdx
@@ -126,7 +126,7 @@ def generate_response(
 ```
 
 Instead, specify the filter conditions in the resolver signature. This will ensure that the filter is applied _before_
-the limit, meaning that the nearest five documents that much all of the filters will be returned.
+the limit, meaning that the nearest five documents that match all of the filters will be returned.
 
 <TipGood>Filter like this</TipGood>
 
